Рефакторинг кода.