@@ -2,6 +2,7 @@ package com.mycompany.testapp.services;
 
 import com.mycompany.testapp.model.Mkb10;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -12,14 +13,23 @@ public class Mkb10TreeService {
 	private Map<String, List<Mkb10>> dataChildList = null;
 
 	public Mkb10TreeService(List<Mkb10> mkb10s) {
-		this.dataRootList = mkb10s.stream()
-			.filter(elem -> elem.getCodeParent() == null
-			|| elem.getCodeParent().trim().isEmpty()
-			|| elem.getCodeParent().trim().isBlank()
-			|| elem.getCodeParent().trim().equalsIgnoreCase("NULL"))
-			.collect(Collectors.toList());
-		this.dataChildList = mkb10s.stream()
-			.collect(Collectors.groupingBy(Mkb10::getCodeParent));
+		if (mkb10s != null) {
+			this.dataRootList = mkb10s.stream()
+				.filter(elem -> elem.getCodeParent() == null
+				|| elem.getCodeParent().trim().isEmpty()
+				|| elem.getCodeParent().trim().isBlank()
+				|| elem.getCodeParent().trim().equalsIgnoreCase("NULL"))
+				.collect(Collectors.toList());
+			this.dataChildList = mkb10s.stream()
+				.filter(elem -> !(elem.getCodeParent() == null
+				|| elem.getCodeParent().trim().isEmpty()
+				|| elem.getCodeParent().trim().isBlank()
+				|| elem.getCodeParent().trim().equalsIgnoreCase("NULL")))
+				.collect(Collectors.groupingBy(Mkb10::getCodeParent));
+		} else {
+			this.dataRootList = new ArrayList<>();
+			this.dataChildList = new HashMap<>();
+		}
 	}
 
 	public List<Mkb10> getRootTreeData() {
